--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -11,9 +11,7 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Microsoft YaHei', '微软雅黑', 'PingFangSC-Regular', sans-serif;
   font-size: 0.16rem;
 }
 
