feat: add normalize.css

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,12 +1,11 @@
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 html {
+  box-sizing: border-box;
   font-size: 625%;
 }
 
